--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,7 @@ jobs:
           echo
           echo Is Java installed?
           java -version
+          echo Where is Selenium Jars?
+          echo $SELENIUM_JAR_PATH
+          echo What env variables are available?
+          env
