--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,15 +22,30 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Log the prebuild disk space
+      - name: Step 1 - Log the prebuild disk space
+        run: df
+    
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Step 2 - Checkout master branch
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: sh ./cmdCommandsCheck.sh
+      # Setup Java in the worksapce
+      - name: Step 3 - Setup Java  JDK 17
+      - uses: actions/setup-java@v4.3.0
+        with:
+          java-version: 1.17
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Run you tests
+      - name: Step 4 - Run your web Ui tests
+        run: echo Run maven tests
+
+      # Log build versions
+      - name: Step 5 - Log build versions
         run: |
-          echo What is in this directory
-          ls -a
+          git --version
+          mvn --version
+          
+      # Log the postbuild disk space
+      - name: Step 6 - Log the postbuild disk space
+        run: df
