--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,18 +23,18 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Log the prebuild disk space
-      - name: Step 1 - Log the prebuild disk space
-        run: df
+      #- name: Step 1 - Log the prebuild disk space
+      #  run: df
     
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Step 2 - Checkout master branch
-      - uses: actions/checkout@v4
+      #- name: Step 2 - Checkout master branch
+      #- uses: actions/checkout@v4
 
       # Setup Java in the worksapce
-      - name: Step 3 - Setup Java  JDK 17
-      - uses: actions/setup-java@v4.3.0
-        with:
-          java-version: 1.17
+      #- name: Step 3 - Setup Java  JDK 17
+      #- uses: actions/setup-java@v4.3.0
+      #  with:
+      #    java-version: 1.17
 
       # Run you tests
       - name: Step 4 - Run your web Ui tests
