--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,18 +27,18 @@ jobs:
         run: df
     
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- name: Step 2 - Checkout master branch
-      #- uses: actions/checkout@v4
+      - name: Step 2 - Checkout master branch
+      - uses: actions/checkout@v4
 
       # Setup Java in the worksapce
-      - name: Step 3 - Setup Java  JDK 17
-      - uses: actions/setup-java@v4.3.0
-        with:
-          java-version: 1.17
+      #- name: Step 3 - Setup Java  JDK 17
+      #- uses: actions/setup-java@v4.3.0
+       # with:
+       #   java-version: 1.17
 
       # Run you tests
       - name: Step 4 - Run your web Ui tests
-        run: echo Run maven tests
+        run: echo maven tests
 
       # Log build versions
       - name: Step 5 - Log build versions
