--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,13 @@ jobs:
     
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Step 2 - Checkout master branch
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       # Setup Java in the worksapce
-      #- name: Step 3 - Setup Java  JDK 17
-      #- uses: actions/setup-java@v4.3.0
-       # with:
-       #   java-version: 1.17
+      - name: Step 3 - Setup Java  JDK 17
+        uses: actions/setup-java@v4.3.0
+        with:
+          java-version: 1.17
 
       # Run you tests
       - name: Step 4 - Run your web Ui tests
