--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Step 3 - Setup Java  JDK 17
         uses: actions/setup-java@v4.3.0
         with:
+          distribution: 'temurin'
           java-version: 17
 
       # Run you tests
