--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains 2 job called "build-on-ubuntu" & "build-on-window"
+  build-on-ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -50,6 +50,46 @@ jobs:
       # Log the postbuild disk space
       - name: Step 6 - Log the postbuild disk space
         run: df
+        
+  build-on-windows:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Log the prebuild disk space
+      - name: Step 1 - Log the prebuild disk space
+        run: ls
+    
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Step 2 - Checkout master branch
+        uses: actions/checkout@v4
+
+      # Setup Java in the worksapce
+      - name: Step 3 - Setup Java  JDK 17
+        uses: actions/setup-java@v4.3.0
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      # Run you tests
+      - name: Step 4 - Run your web Ui tests
+        run: echo maven tests
+
+      # Log build versions
+      - name: Step 5 - Log build versions
+        run: |
+          git --version
+          mvn --version
+          
+      # Check windows execution policy
+      - name: Step 6 - Check windows execution policy
+        run: |
+          echo Here is the windows execution policy:
+          Get-ExecutionPolicy
+
+          # Check windows environment
+      - name: Step 7 - Check windows environment
+        run: env
 
         
